# Highway2Hole

./: README.md
map/: README.md  main.html
src/: README.md  main.py
src/DBMS/: DBMS.py  highway2hole.db  test.py  tmp.txt
src/DBMS/data/: highway2hole.db
src/functions/: time_location.py
src/logs/: gps_test_data.gpx
src/map_painting/: parser.py  time_location.py
src/map_painting/map/: Map.py  README.md  main.html
src/model/: CMakeLists.txt
src/model/data/: yolov3-tiny.mapping  yolov3-tiny.xml
src/model/include/: detector.hpp
src/model/src/: detector.cpp  main.cpp
